@@ -3,12 +3,13 @@ package use.cases.command.propiedades.list;
 import an.awesome.pipelinr.Command;
 import core.BusinessRuleValidationException;
 import dtos.PropiedadDto;
-import model.Propiedad;
+import com.nur.model.Propiedad;
 import org.springframework.stereotype.Component;
-import repositories.PropiedadRepository;
+import com.nur.repositories.PropiedadRepository;
 import utils.PropiedadMapper;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class GetPropiedadesHandler
@@ -24,7 +25,7 @@ public class GetPropiedadesHandler
   public List<PropiedadDto> handle(GetPropiedadesQuery command) {
     try {
       List<Propiedad> propiedad = this.propiedadRepository.getAll();
-      return propiedad.stream().map(PropiedadMapper::from).toList();
+      return propiedad.stream().map(PropiedadMapper::from).collect(Collectors.toList());
     } catch (BusinessRuleValidationException e) {
       e.printStackTrace();
       return null;
