@@ -2,19 +2,15 @@ package use.cases.command.tipropiedades.get;
 
 import an.awesome.pipelinr.Command;
 import core.BusinessRuleValidationException;
-import dtos.PropiedadDto;
 import dtos.TipoPropiedadDto;
-import model.Propiedad;
-import model.TipoPropiedad;
+import com.nur.model.TipoPropiedad;
 import org.springframework.stereotype.Component;
-import repositories.PropiedadRepository;
-import repositories.TipoPropiedadRepository;
-import use.cases.command.propiedades.get.GetPropiedadQuery;
-import utils.PropiedadMapper;
+import com.nur.repositories.TipoPropiedadRepository;
 import utils.TipoPropiedadMapper;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class GetTipoPropiedadHandler
@@ -34,7 +30,7 @@ public class GetTipoPropiedadHandler
       List<TipoPropiedad> propiedades = propiedadRepository.findTipoPropiedadById(
               UUID.fromString(command.id)
       );
-      return propiedades.stream().map(TipoPropiedadMapper::from).toList();
+      return propiedades.stream().map(TipoPropiedadMapper::from).collect(Collectors.toList());
     } catch (BusinessRuleValidationException e) {
       e.printStackTrace();
       return null;
