@@ -1,12 +1,13 @@
 package infraestructure.utils;
 
-import annotations.Generated;
+import com.nur.annotations.Generated;
 import core.BusinessRuleValidationException;
 import infraestructure.model.PropiedadJpaModel;
-import model.Propiedad;
+import com.nur.model.Propiedad;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Generated
 public class PropiedadUtils {
@@ -18,19 +19,19 @@ public class PropiedadUtils {
         propiedadJpaModel.setId(propiedad.getId());
         propiedadJpaModel.setNombre(propiedad.getNombre());
         propiedadJpaModel.setEstado(propiedad.getEstado().toString());
-        propiedadJpaModel.setPrecio(propiedad.getPrecio().getValue());
+        propiedadJpaModel.setPrecio(propiedad.getPrecio());
         return propiedadJpaModel;
     }
 
     public static List<PropiedadJpaModel> propiedadToJpaEntities(List<Propiedad> propiedades) {
         if (propiedades == null) return Collections.emptyList();
-        return propiedades.stream().map(PropiedadUtils::propiedadToJpaEntity).toList();
+        return propiedades.stream().map(PropiedadUtils::propiedadToJpaEntity).collect(Collectors.toList());
     }
 
     public static Propiedad jpaModelToPropiedad(PropiedadJpaModel jpaModel)
             throws BusinessRuleValidationException {
         return new Propiedad(
-                jpaModel.getId(),
+                String.valueOf(jpaModel.getId()),
                 jpaModel.getNombre(),
                 jpaModel.getEstado(),
                 jpaModel.getPrecio()
