@@ -1,11 +1,13 @@
 package infraestructure.utils;
 
-import annotations.Generated;
+import com.nur.annotations.Generated;
 import core.BusinessRuleValidationException;
 import infraestructure.model.TransactionJpaModel;
 import java.util.Collections;
 import java.util.List;
-import model.Transaccion;
+import java.util.stream.Collectors;
+
+import com.nur.model.Transaccion;
 
 @Generated
 public class TransaccionUtils {
@@ -22,7 +24,7 @@ public class TransaccionUtils {
 
   public static List<TransactionJpaModel> seatsToJpaEntities(List<Transaccion> seats) {
     if (seats == null) return Collections.emptyList();
-    return seats.stream().map(TransaccionUtils::seatToJpaEntity).toList();
+    return seats.stream().map(TransaccionUtils::seatToJpaEntity).collect(Collectors.toList());
   }
 
   public static Transaccion jpaModelToSeat(TransactionJpaModel jpaModel)
